syntax = "proto3";

package netdata.v1;

// A function declaration message for Netdata's external plugin protocol
message FunctionDeclaration {
    // True if the function is global
    bool global = 1;

    // The name of the function
    string name = 2;
    
    // Timeout in seconds for function execution
    uint32 timeout = 3;
    
    // Help text describing what the function does
    string help = 4;
    
    // Tags of the function
    optional string tags = 5;
    
    // Access control flags for the function
    optional uint32 access = 6;
    
    // Priority level for function execution
    optional uint32 priority = 7;

    // Version of the function
    optional uint32 version = 8;
}

// A function call message for invoking functions (input context)
message FunctionCall {
    // Transaction ID for this function call
    string transaction = 1;
    
    // Timeout in seconds for function execution
    uint32 timeout = 2;
    
    // Function name to call
    string name = 3;
    
    // Access control flags for the function
    optional uint32 access = 4;
    
    // Source information containing caller details
    optional string source = 5;
    
    // Payload data for the function call (optional)
    optional bytes payload = 6;
}

// A function result message containing the response payload
message FunctionResult {
    // Transaction ID or unique identifier for this function call
    string transaction = 1;
    
    // Status of the function call
    uint32 status = 2;
    
    // Content type of the result (e.g., "application/json", "text/plain")
    string format = 3;
    
    // Expires timestamp
    uint32 expires = 4;
    
    // Result payload data
    bytes payload = 5;
}

// A function cancel message for terminating function execution
message FunctionCancel {
    // Transaction ID of the function call to cancel
    string transaction = 1;
}
